Removing the clear left class as it cuases issue on tablet on locations

--- a/css/global-style.css
+++ b/css/global-style.css
@@ -517,7 +517,6 @@ a.btn-default:hover {
 
 .read-more {
   float: right;
-  clear: left;
 }
 
 blockquote {
